package es.udc.agon.backend.model.entities;

public enum EstadoEquipo {
    ACTIVO, DISUELTO
}
