package es.udc.agon.backend.model.entities;

public enum EstadoInscripcion {
    ACTIVA, CANCELADA
}
