package es.udc.agon.backend.model.entities;

public enum EstadoJornada {
    ACTIVA, APLAZADA
}
