package es.udc.agon.backend.model.entities;

public enum EstadoTorneo {
    RECLUTANDO, FASE_GRUPOS, PLAYOFF, FINALIZADO
}
