package es.udc.agon.backend.model.entities;

public enum TipoFase {
    LIGA_GRUPO, ELIMINATORIA
}
