classDiagram
    direction TB

    class EstadoSolicitud { <<enumeration>> PENDIENTE, ACEPTADO, RECHAZADO }
    class TipoSolicitud { <<enumeration>> PROPUESTA, PETICION }
    class TipoNotificacion { <<enumeration>> INVITACION, RECORDATORIO_PARTIDO, RESULTADO_PARTIDO, SOLICITUD_APLAZAMIENTO, SYSTEM }
    class EstadoEquipo { <<enumeration>> ACTIVO, DISUELTO }

    class EstadoTorneo { <<enumeration>> RECLUTANDO, FASE_GRUPOS, PLAYOFF, FINALIZADO }
    class EstadoInscripcion { <<enumeration>> ACTIVA, CANCELADA }
    class TipoFase { <<enumeration>> LIGA_GRUPO, ELIMINATORIA }
    class EstadoJornada { <<enumeration>> ACTIVA, APLAZADA }
    class TipoJornada { <<enumeration>> LIGA_4_SETS, PLAYOFF_BEST_OF_5 }
    class EstadoEncuentro { <<enumeration>> PENDIENTE, JUGADO, APLAZADO, SOLICITADO_APLAZAMIENTO }

    %% --- Entidades implementadas --- %%
    class Usuario {
        -Long id
        -int elo
        -String nombre
        -String email
        -String imagenPerfil
        -String password
        -LocalDate fechaNacimiento
        -boolean eloProvisional
        -String role
    }
    class Notificacion {
        -Long id
        -User usuario
        -String asunto
        -String cuerpo
        -boolean leido
        -boolean pendienteDeAccion
        -Long referenciaId
        -TipoNotificacion tipo
        -LocalDateTime fechaCreacion
        +setLeido(boolean) void
    }
    class Equipo {
        -Long id
        -String nombreEquipo
        -EstadoEquipo estado
        -String descripcion
        -User creador
        -String codigoEquipo
        -Set~User~ miembros
        +addMiembro(User) void
        +removeMiembro(User) void
    }
    class Solicitud {
        -Long id
        -User candidato
        -User decisor
        -Equipo equipo
        -EstadoSolicitud estado
        -TipoSolicitud tipoSolicitud
        -LocalDateTime fechaCreacion
        +aceptar() void
        +rechazar() void
    }

    %% --- Entidades no implementadas  --- %%
    class Torneo {
        -Long id
        -String nombre
        -int numGrupos
        -int equiposPorGrupo
        -boolean tienePlayoff
        -EstadoTorneo estado
    }
    class Grupo {
        -Long id
        -String nombreGrupo
        +getClasificacion() List~Inscripcion~
        +estaLLeno() boolean
    }
    class Inscripcion {
        -Long id
        -int partidosJugados
        -int puntosLiga
        -int setsGanados
        -int setsPerdidos
        -EstadoInscripcion estadoInscripcion
        +actualizarEstadisticas(int setsAFavor, int setsEnContra) void
    }
    class Jornada {
        -Long id
        -int numeroJornada
        -TipoFase tipoFase
        -TipoJornada formatoJornada
        -EstadoJornada estado
        -LocalDate fechaInicio
        -LocalDate fechaFin
    }
    class Encuentro {
        -Long id
        -Equipo local
        -Equipo visitante
        -EstadoEncuentro estadoEncuentro
        -LocalDateTime fechaRealizacion
        +registrarResultado(List~Set~ sets) void
        +getGanador() Equipo
        +getPuntosLocal() int
        +getPuntosVisitante() int
    }
    class Set {
        -Long id
        -int numeroSet
        -int golesLocal
        -int golesVisitante
    }
    class SolicitudAplazamiento {
        -Long id
        -LocalDateTime fechaSolicitada
        -EstadoSolicitud estado
        +aceptarSolicitud() void
        +cancelarSolicitud() void
    }

    %% --- RELACIONES IMPLEMENTADAS --- %%
    Usuario "1" --> "N" Equipo : "es creador de"
    Usuario "1" --> "N" Notificacion : "recibe"
    Usuario "1" --> "N" Solicitud : "candidato (envía)"
    Usuario "1" --> "N" Solicitud : "decisor (decide)"

    Equipo "1" --> "1" User : "creador"
    Equipo "N" --> "N" User : "miembros"
    Equipo "1" --> "N" Solicitud : "recibe solicitudes"

    %% --- RELACIONES CON ENUMERADOS IMPLEMENTADAS --- %%
    Notificacion ..> TipoNotificacion : "tipo"
    Equipo ..> EstadoEquipo : "estado"
    Solicitud ..> EstadoSolicitud : "estado"
    Solicitud ..> TipoSolicitud : "tipoSolicitud"

    %% --- RELACIONES NO IMPLEMENTADAS  --- %%
    Usuario "1" --> "N" Torneo : "organiza"

    Torneo "1" *-- "N" Grupo : "posee"
    Torneo "1" *-- "N" Jornada : "planifica"
    Torneo "1" --> "N" Inscripcion : "gestiona"

    Equipo "1" --> "N" Inscripcion : "pertenece a"

    Grupo "1" --> "N" Inscripcion : "clasifica"

    Jornada "1" *-- "N" Encuentro : "contiene"

    Encuentro "1" *-- "N" Set : "tiene"
    Encuentro "1" --> "N" SolicitudAplazamiento : "recibe"
    Encuentro "1" --> "1" Equipo : "local"
    Encuentro "1" --> "1" Equipo : "visitante"

    %% --- RELACIONES CON ENUMERADOS NO IMPLEMENTADAS --- %%
    Torneo ..> EstadoTorneo : "estado"
    Inscripcion ..> EstadoInscripcion : "estadoInscripcion"
    Jornada ..> TipoFase : "tipoFase"
    Jornada ..> TipoJornada : "formatoJornada"
    Jornada ..> EstadoJornada : "estado"
    Encuentro ..> EstadoEncuentro : "estadoEncuentro"
    SolicitudAplazamiento ..> EstadoSolicitud : "estado"
